# OpenAlgalBloomPredictorAI

./: .gitignore  .pylancerc  README.md  algalbloom.csv  app.py  pyproject.toml  requirements.txt  run.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  deploy-pages.yml  python-app.yml
.streamlit/: config.toml
src/: algal_bloom_predictor.py  app.py
src/components/: guides_component.py  history_component.py  map_component.py  useful_info_component.py  wildlife_component.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: Footer.tsx  Navbar.tsx  RiskBadge.tsx  StatCard.tsx
ui/src/data/: mockData.ts
ui/src/pages/: About.tsx  Dashboard.tsx  DataPage.tsx  MapPage.tsx  Predictor.tsx
ui/src/types/: index.ts
ui/src/utils/: predictor.ts
